fix(portal): add missing bg-orange-600 CSS class to make AsyncAPI message ID visible
https://gravitee.atlassian.net/browse/APIM-14362
(cherry picked from commit eff78c7e0e82bbe4c0e309208dde29bc281729c7)

--- a/gravitee-apim-portal-webui/src/assets/styles/asyncapi-component.css
+++ b/gravitee-apim-portal-webui/src/assets/styles/asyncapi-component.css
@@ -1259,6 +1259,11 @@ video {
   background-color: rgba(128, 90, 213, var(--tw-bg-opacity));
 }
 
+.bg-orange-600{
+  --tw-bg-opacity: 1;
+  background-color: rgba(221, 107, 32, var(--tw-bg-opacity));
+}
+
 .hover\:bg-orange-300:hover{
   --tw-bg-opacity: 1;
   background-color: rgba(251, 211, 141, var(--tw-bg-opacity));
